<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">A.R.I.S.E.</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_registeration">RegisterationActivity</string>
    <string name="signup_message">Doesn\'t have an account?</string>
    <string name="signup_textview">Signup</string>
    <string name="loginheader_message">Login To Your Account</string>
    <string name="newuser_header">Register New User</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="gender_female">Female</string>
    <string name="gender_male">Male</string>
    <string name="contact">Contact</string>
    <string name="country">Country</string>
    <string name="qual">Qualification</string>
    <string name="signup_text_button">Signup</string>
    <string name="username_text_display">username</string>
    <string name="title_activity_home">Home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_todo">TO-DO</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>

    <string-array name="navigation_drawer_items">
        <item>Home</item>
        <item>About Me</item>
        <item>About ARISE</item>
        <item>Logout</item>
    </string-array>

    <string name="title_activity_about_arise">About Arise v1.1</string>
    <string name="title_activity_about_user">About User</string>
    <string name="about_arise">Act to Rise for Innovation in Special Education (ARISE) Impact is a mission oriented non-profit enabling self-learning for differently-abled. Since 2010, we are developing and disseminating self- learning content, games and apps for the differently-abled. Our capstone service is delivering Special Education Modules for visually challenged. We have conducted in-classroom on-ground research studies to model the learning mechanism of visually challenged children</string>
    <string name="link_to_arise">Get to Know us better!</string>
    <string name="about_user_fname">First Name</string>
    <string name="about_user_lname">Last Name</string>
    <string name="about_user_email">Email Address</string>
    <string name="about_user_contact">Contact Number</string>
    <string name="about_user_retype_password">Retype Password</string>
    <string name="about_user_new_password">New Password</string>
    <string name="about_user_main_heading">About You</string>
    <string name="title_activity_course_details">Course Details</string>
    <string name="title_activity_play_lecture">Playing Lecture</string>
    <string name="oldPass">Old Password</string>
    <string name="newPassword">New Password</string>
    <string name="pressToEdit">Edit Details</string>
    <string name="saveEditDetails">Save Details</string>
    <string name="confirm">Confirm Password</string>
    <string name="forgot_password_text">Forgot Password? Click here</string>
    <string name="title_activity_no_connection">NoConnectionActivity</string>
    <string name="title_activity_forgot_password">ForgotPassword</string>

</resources>
