<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/about_user_id"
    android:background="@drawable/dark_background"
    tools:context="arise.arise.org.arise.AboutUser">

    <include
        layout="@layout/app_bar"
        android:id="@+id/app_bar">
    </include>


<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <LinearLayout
            android:orientation="vertical"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableLayout
                android:background="#bdbdbd"
                android:padding="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow>

                    <TextView
                        android:textColor="#fff"
                        android:textSize="14dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about_user_fname"
                        />

                    <EditText
                        android:textColor="#fff"
                        android:textSize="14dp"
                        android:layout_width="0px"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:id="@+id/about_user_fname_editText" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:textColor="#fff"
                        android:textSize="14dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about_user_lname"
                        />

                    <EditText
                        android:textColor="#fff"
                        android:textSize="14dp"
                        android:layout_width="0px"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:id="@+id/about_user_lname_editText" />

                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:textColor="#fff"
                        android:textSize="14dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about_user_email"
                        />

                    <EditText
                        android:textColor="#fff"
                        android:textSize="14dp"
                        android:layout_width="0px"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:id="@+id/about_user_email_editText" />

                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:textColor="#fff"
                        android:textSize="14dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about_user_contact"
                        />

                    <EditText
                        android:textColor="#fff"
                        android:textSize="14dp"
                        android:layout_width="0px"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:id="@+id/about_user_contact_edit" />

                </TableRow>

            </TableLayout>

            <LinearLayout
                android:background="#bdbdbd"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/edit_details_text"
                    android:textSize="15dp"
                    android:textColor="#2196f3"
                    android:text="@string/pressToEdit"
                    android:clickable="true"
                    android:onClick="enableButtonSaveDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"/>

                <Button
                    android:id="@+id/save_details_button"
                    android:text="@string/saveEditDetails"
                    android:clickable="true"
                    android:onClick="saveDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"/>

            </LinearLayout>

        </LinearLayout>


        <TextView
            android:id="@+id/change_password_text_view"
            android:layout_marginTop="15dp"
            android:text="Change Password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="15dp"
            android:textColor="#03a9f4"
            android:clickable="true"
            android:onClick="showPasswordForm"
        />

        <LinearLayout
            android:orientation="vertical"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:id="@+id/change_password_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp">

        <TableLayout
            android:padding="7dp"
            android:background="#e0e0e0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:textColor="#000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/oldPass"
                    />

                <EditText
                    android:inputType="textPassword"
                    android:textColor="#000"
                    android:layout_width="0px"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:id="@+id/user_old_password" />

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:textColor="#000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/newPassword"
                    />

                <EditText
                    android:inputType="textPassword"
                    android:textColor="#000"
                    android:layout_width="0px"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:id="@+id/user_new_password" />

            </TableRow>

            <TableRow
                android:textColor="#000"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:textColor="#000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_user_retype_password"
                    />

                <EditText
                    android:inputType="textPassword"
                    android:textColor="#000"
                    android:layout_width="0px"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:id="@+id/user_retype" />

            </TableRow>

        </TableLayout>
        <LinearLayout
            android:orientation="vertical"
            android:background="#e0e0e0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <Button
            android:id="@+id/pass_button"
            android:text="@string/confirm"
            android:clickable="true"
            android:onClick="savePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
        </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>
</LinearLayout>
