<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    tools:context=".LoginActivity"
    android:background="@drawable/main_background">

    <!--Scroll view can have only on direct child  -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_background"
        android:orientation="vertical">

        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="150dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/login_background"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:background="@drawable/username_back"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/new_03"
                android:layout_marginLeft="13dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/new_04"
                android:id="@+id/username_text"
                android:layout_marginTop="10dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:layout_marginBottom="10dp"
                android:inputType="textWebEmailAddress"
                android:hint="username"
                android:layout_marginRight="15dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="0dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:background="@drawable/password_back"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/new_08"
                android:layout_marginLeft="15dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/new_09"
                android:inputType="textPassword"
                android:id="@+id/password_text"
                android:alpha="1"
                android:paddingStart="10dp"
                android:password="false"
                android:paddingEnd="10dp"
                android:hint="password"
                android:layout_marginRight="15dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/signin_background"
                android:id="@+id/login_button"
                android:clickable="true"
                android:onClick="gotoHome" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_message"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="60dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_textview"
                android:clickable="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:onClick="gotoRegistrationPage"
                android:id="@+id/link_to_registration"
                android:layout_marginBottom="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password_text"
                android:clickable="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="2dp"
                android:onClick="forgotPassword"
                android:id="@+id/forgot_password"
                android:layout_marginBottom="25dp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>
